<resources>
    <string name="app_name">GraduationApp</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_me">Me</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forget">Forgot your password?</string>
    <string name="welcometoshopfiy">Welcome to shopfiy</string>
    <string name="accessories">Accessories</string>
    <string name="Tshirt">T-Shirt</string>
    <string name="shoes">Shoes</string>
    <string name="Shopfiy">Shopfiy</string>
    <string name="RegisterLogin">SIGN IN / REGISTER</string>
    <string name="wishList">Wish List</string>
    <string name="orderList">Order List</string>
    <string name="LoginToSee">Please Login to See your Wish List</string>
    <string name="logout">LogOut</string>
    <string name="facebook_app_id">2922863254703231</string>
    <string name="fb_login_protocol_scheme">fb2922863254703231</string>
    <string name="adds">ADDS</string>
    <string name="search">Search</string>
    <string name="result">Results</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="quantity">Quantity:</string>
    <string name="type">Type:</string>
    <string name="addtocart">Add to Cart</string>
    <string name="notAve">Not Available</string>

    <string name="seeMore">See More</string>
    <string name="sort">Sort</string>
    <string name="lowtohigh">Price low to high</string>
    <string name="hightolow">Price high to low</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="general_setting">General Settings</string>
    <string name="default_language">Default Language</string>
    <string name="default_mode">Dark Mode</string>
    <string name="about_setting">About</string>
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="order_data">Order Data</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="zip">Zip Code</string>
    <string name="save">Save</string>
    <string name="total">Total = </string>
    <string name="empty_cart">Cart is Empty, please add some items before </string>
    <string name="delete">Delete</string>
    <string name="deleteMessage">Are you sure to delete it</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="order">Order</string>
    <string name="order_created">Your Order Created</string>
    <string name="ok">Ok</string>
    <string name="valid_num">Enter valid Phone Number</string>
    <string name="valid_code">please Enter Country Code in the First , like +2 for Egypt</string>
    <string name="valid">"Please, Enter Valid Country, province and Address "</string>
    <string name="orderId">Order ID:</string>
    <string name="order_canceled">Your Order Cancelled</string>
    <string name="discount">Discount</string>
    <string name="usecode">Using the discount code will reduce the total by 10%</string>
    <string name="inCart">In Cart</string>
    <string name="address_data">Address Data</string>
    <string name="total_pric">TOTAL PRICE</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="discount_code">Discount Code</string>
    <string name="user_data">USER DATA</string>
    <string name="confirmation">CONFIRMATION</string>


</resources>