<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.graduationapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.graduationapp.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.example.graduationapp.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" >
        <action
            android:id="@+id/action_navigation_me_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:launchSingleTop="false"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.graduationapp.ui.settingsFeature.SettingsFragment"
        android:label="SettingsFragment" >
        <action
            android:id="@+id/action_settingsFragment_to_navigation_me"
            app:destination="@id/navigation_me"
            app:popUpTo="@id/navigation_me"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>