<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.category.CategoryFragment"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/cart_icon"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_cart" />
        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@id/cart_icon"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            app:srcCompat="@drawable/ic_search" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toTopOf="parent"
            app:tabMode="scrollable"
            app:tabTextColor="@color/black"
            android:background="@color/semiTransparentColorBorder"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tab_layout">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="200dp">
                <Button
                    android:id="@+id/acce"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textColor="@color/black"
                    android:background="@color/semiTransparentColorBorder"
                    android:text="@string/accessories"
                    app:backgroundTint="@null"/>
                <Button
                    android:id="@+id/tshirt"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textColor="@color/black"
                    android:background="@color/semiTransparentColorBorder"
                    android:text="@string/Tshirt"
                    app:backgroundTint="@null"/>
                <Button
                    android:id="@+id/shoes"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:textColor="@color/black"
                    android:background="@color/semiTransparentColorBorder"
                    android:text="@string/shoes"
                    app:backgroundTint="@null"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_weight="3"
                android:id="@+id/category_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:listitem="@layout/sub_category_item"
                app:layout_constraintTop_toBottomOf="@id/tab_layout"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>